--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 		<![endif]-->
 	</head>
 	<body>
-		
-	  <div class="jumbotron">
+		<div class="container">
+			<div class="jumbotron">
 	  	<h1>The Image Gallery</h1>
 	  </div>
+		</div>
 		<!-- jQuery -->
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<!-- Bootstrap JavaScript -->
