--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Title Page</title>
+		<title>Photo Gallery</title>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -19,8 +19,9 @@
 	<body>
 		<div class="container">
 			<div class="jumbotron">
-	  	<h1>The Image Gallery</h1>
-	  </div>
+	  		<h1>The Image Gallery</h1>
+	  		<p>A responsive image gallery made with bootstrap3</p>
+	  	</div>
 		</div>
 		<!-- jQuery -->
 		<script src="https://code.jquery.com/jquery.js"></script>
