--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		<![endif]-->
 	</head>
 	<body>
+	<nav class="navbar navbar-default">
+		
+	</nav>
 		<div class="container">
 			<div class="jumbotron">
 	  		<h1>The Image Gallery</h1>
