--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 		<![endif]-->
 	</head>
 	<body>
-	<nav class="navbar navbar-default">
-		
-	</nav>
+		<nav class="navbar navbar-default">
+			<div class="container">
+				
+			</div>
+		</nav>
+
 		<div class="container">
 			<div class="jumbotron">
 	  		<h1>The Image Gallery</h1>
