--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	<body>
 		<nav class="navbar navbar-default">
 			<div class="container">
-				
+				<div class="navbar-header">
+					
+				</div>
 			</div>
 		</nav>
 
