--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header">
-					
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
+						
+					</button>
 				</div>
 			</div>
 		</nav>
