--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
-						
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
 					</button>
+					<a href="#" class="navbar-brand"></a>
 				</div>
 			</div>
 		</nav>
