--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 					</button>
 					<a href="#" class="navbar-brand"></a>
 				</div>
+				<div class="collapse navbar-collapse" id="bs-nav-demo">
+					<ul class="nav navbar-nav">
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+					<ul class="nav navbar-nav">
+						<li><a href="#">Sign Up</a></li>
+						<li><a href="#">Login</a></li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 
