started on grids

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<![endif]-->
 	</head>
 	<body>
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-inverse">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
@@ -26,14 +26,14 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand"></a>
+					<a href="#" class="navbar-brand">Piks</a>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-nav-demo">
 					<ul class="nav navbar-nav">
 						<li><a href="#">About</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
-					<ul class="nav navbar-nav">
+					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#">Sign Up</a></li>
 						<li><a href="#">Login</a></li>
 					</ul>
@@ -45,6 +45,18 @@
 			<div class="jumbotron">
 	  		<h1>The Image Gallery</h1>
 	  		<p>A responsive image gallery made with bootstrap3</p>
+	  	</div>
+
+	  	<div class="row">
+	  		<div class="col-lg-4">
+	  			sfadafa
+	  		</div>
+	  		<div class="col-lg-4">
+	  			sfadafa
+	  		</div>
+	  		<div class="col-lg-4">
+	  			sfadafa
+	  		</div>
 	  	</div>
 		</div>
 		<!-- jQuery -->
