fixed image sizing

--- a/index.html
+++ b/index.html
@@ -49,13 +49,9 @@
 
 	  	<div class="row">
 	  		<div class="col-lg-4">
-	  			sfadafa
-	  		</div>
-	  		<div class="col-lg-4">
-	  			sfadafa
-	  		</div>
-	  		<div class="col-lg-4">
-	  			sfadafa
+	  			<div class="thumbnail">
+	  				<img src="http://i.imgur.com/qK42fUu.jpg">
+	  			</div>
 	  		</div>
 	  	</div>
 		</div>
