checked to see if grid works

--- a/index.html
+++ b/index.html
@@ -53,6 +53,46 @@
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
 	  		</div>
+	  		<div class="col-lg-4">
+	  			<div class="thumbnail">
+	  				<img src="http://i.imgur.com/qK42fUu.jpg">
+	  			</div>
+	  		</div>
+	  		<div class="col-lg-4">
+	  			<div class="thumbnail">
+	  				<img src="http://i.imgur.com/qK42fUu.jpg">
+	  			</div>
+	  		</div>
+	  		<div class="col-lg-4">
+	  			<div class="thumbnail">
+	  				<img src="http://i.imgur.com/qK42fUu.jpg">
+	  			</div>
+	  		</div>
+	  		<div class="col-lg-4">
+	  			<div class="thumbnail">
+	  				<img src="http://i.imgur.com/qK42fUu.jpg">
+	  			</div>
+	  		</div>
+	  		<div class="col-lg-4">
+	  			<div class="thumbnail">
+	  				<img src="http://i.imgur.com/qK42fUu.jpg">
+	  			</div>
+	  		</div>
+	  		<div class="col-lg-4">
+	  			<div class="thumbnail">
+	  				<img src="http://i.imgur.com/qK42fUu.jpg">
+	  			</div>
+	  		</div>
+	  		<div class="col-lg-4">
+	  			<div class="thumbnail">
+	  				<img src="http://i.imgur.com/qK42fUu.jpg">
+	  			</div>
+	  		</div>
+	  		<div class="col-lg-4">
+	  			<div class="thumbnail">
+	  				<img src="http://i.imgur.com/qK42fUu.jpg">
+	  			</div>
+	  		</div>
 	  	</div>
 		</div>
 		<!-- jQuery -->
