added new column to pics

--- a/index.html
+++ b/index.html
@@ -48,47 +48,47 @@
 	  	</div>
 
 	  	<div class="row">
-	  		<div class="col-lg-4">
+	  		<div class="col-lg-4 col-md-6">
 	  			<div class="thumbnail">
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
 	  		</div>
-	  		<div class="col-lg-4">
+	  		<div class="col-lg-4 col-md-6">
 	  			<div class="thumbnail">
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
 	  		</div>
-	  		<div class="col-lg-4">
+	  		<div class="col-lg-4 col-md-6">
 	  			<div class="thumbnail">
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
 	  		</div>
-	  		<div class="col-lg-4">
+	  		<div class="col-lg-4 col-md-6">
 	  			<div class="thumbnail">
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
 	  		</div>
-	  		<div class="col-lg-4">
+	  		<div class="col-lg-4 col-md-6">
 	  			<div class="thumbnail">
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
 	  		</div>
-	  		<div class="col-lg-4">
+	  		<div class="col-lg-4 col-md-6">
 	  			<div class="thumbnail">
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
 	  		</div>
-	  		<div class="col-lg-4">
+	  		<div class="col-lg-4 col-md-6">
 	  			<div class="thumbnail">
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
 	  		</div>
-	  		<div class="col-lg-4">
+	  		<div class="col-lg-4 col-md-6">
 	  			<div class="thumbnail">
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
 	  		</div>
-	  		<div class="col-lg-4">
+	  		<div class="col-lg-4 col-md-6">
 	  			<div class="thumbnail">
 	  				<img src="http://i.imgur.com/qK42fUu.jpg">
 	  			</div>
