--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<div class="container">
 			<div class="jumbotron">
-	  		<h1><span class="glyphicon glyphicon-search" aria-hidden="true"></span>The Image Gallery</h1>
+	  		<h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
 	  		<p>A responsive image gallery made with bootstrap3</p>
 	  	</div>
 
