--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">Piks</a>
+					<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture" aria-hidden="true">Piks</a>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-nav-demo">
 					<ul class="nav navbar-nav">
