--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<![endif]-->
 	</head>
 	<body>
-		<nav class="navbar navbar-inverse">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
@@ -26,7 +26,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture" aria-hidden="true">Piks</a>
+					<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture" aria-hidden="true"> Piks</a>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-nav-demo">
 					<ul class="nav navbar-nav">
