--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 		<div class="container">
 			<div class="jumbotron">
-	  		<h1><span class="glyphicon fa-camera-retro" aria-hidden="true"></span> The Image Gallery</h1>
+	  		<h1><span class="fa fa-camera-retro" aria-hidden="true"></span> The Image Gallery</h1>
 	  		<p>A responsive image gallery made with bootstrap3</p>
 	  	</div>
 
